WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208195
[LFC] Invalidate layout states on style mutation
https://bugs.webkit.org/show_bug.cgi?id=208195
Summary
[LFC] Invalidate layout states on style mutation
alan
Reported
2020-02-25 07:36:31 PST
a blanket invalidation for now.
Attachments
Patch
(3.34 KB, patch)
2020-02-25 07:40 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-25 07:36:51 PST
<
rdar://problem/59764089
>
alan
Comment 2
2020-02-25 07:40:26 PST
Created
attachment 391650
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-25 08:26:42 PST
Comment on
attachment 391650
[details]
Patch Clearing flags on attachment: 391650 Committed
r257355
: <
https://trac.webkit.org/changeset/257355
>
WebKit Commit Bot
Comment 4
2020-02-25 08:26:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug