[LFC] Invalidate layout states on style mutation https://bugs.webkit.org/show_bug.cgi?id=208195 <rdar://problem/59764089>

Reviewed by Antti Koivisto.

Let's just do a blanket invalidation for now (since we don't have the invalidation figured out yet).

* page/FrameViewLayoutContext.cpp:
(WebCore::FrameViewLayoutContext::invalidateLayoutState):
* page/FrameViewLayoutContext.h:
* rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateRendererStyle):


Canonical link: https://commits.webkit.org/221128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257355 268f45cc-cd09-0410-ab3c-d52691b4dbfc